--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
+    "@types/three": "^0.182.0",
     "framer-motion": "^12.23.24",
+    "gsap": "^3.14.2",
+    "lenis": "^1.3.16",
     "lucide-react": "^0.555.0",
     "next": "16.0.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "three": "^0.182.0",
     "yahoo-finance2": "^3.10.2"
   },
   "devDependencies": {
@@ -22,7 +28,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
-    "baseline-browser-mapping": "^2.8.32",
+    "baseline-browser-mapping": "^2.9.10",
     "eslint": "^9",
     "eslint-config-next": "16.0.4",
     "tailwindcss": "^4",
